[package]
name = "posted-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
actix-web-httpauth = "0.8.1"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.20"
serde = "1.0.196"
serde_json = "1.0.113"
sqlx = { version = "0.7.3", features = [ "runtime-async-std", "mysql" ] }
